--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,13 @@ section{
     text-align: center;
     margin-bottom: 60px;
 }
+p, div.Contenedor-Producto{
+    padding-bottom: 20px;
+}
 
+h3{
+    padding-bottom: 10px;
+}
 .titulo1{
     border-top: 10px;
     color: #642a73;
