--- a/css/Style_contacto.css
+++ b/css/Style_contacto.css
@@ -8,6 +8,13 @@ body{
     font-family:Arial, Helvetica, sans-serif;
 }
 
+.Titulo{
+    color: #642a73;
+    font-size: 29px;
+    text-align: center;
+    margin-bottom: 60px;
+}
+
 nav{
     text-align: right;
     padding: 30px 50px 0 0;
